# emailverifier_django_docker

./: Dockerfile.django  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
app/common/: func.py  managers.py  models.py  utils.py
app/common/tests/: tests_utils.py
app/user/: admin.py  models.py  views.py
app/user/api/: authentication.py  urls.py
app/user/tests/: tests_views.py
app/verify/: admin.py  apps.py  clients.py  models.py
config/: asgi.py  wsgi.py
config/api/: urls.py
config/settings/: base.py  dev.py  staging.py
