[tool.poetry]
name = "emailverifier-django-docker"
version = "0.1.0"
description = ""
authors = ["Валерий Газаров"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
djangorestframework = "==3.11.2"
drf-yasg = "*"
sentry-sdk = "*"
tqdm = "*"
pendulum = "*"
setuptools = "==50.3.2"
requests = "*"
urllib3 = "==1.26.0"
pandas = "*"
Django = "3.2"
asgiref = "^3.5.2"
psycopg2-binary = "^2.9.3"
openpyxl = "^3.0.10"
celery = "^5.2.7"
redis = "^4.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
